Add docker compose

--- a/nodeApp/Dockerfile
+++ b/nodeApp/Dockerfile
@@ -70,6 +70,6 @@ RUN apk add --no-cache --virtual .build-deps-yarn curl gnupg tar \
   
 WORKDIR /usr/src/app
 
-COPY main.js /usr/src/app
+COPY src/main.js /usr/src/app
 EXPOSE 8081
 CMD [ "node", "main.js" ]
