--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,11 @@
 upstream loadbalance {
     least_conn;
-    server backend1:8081;
-    server backend2:8081;
+    server nodeapp1:8081;
+    server nodeapp2:8081;
 }
 
 server {
+    listen 8080;
     location / {
         proxy_pass http://loadbalance;
     }
