--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,16 @@
-upstream loadbalance {
-    least_conn;
+http {
+
+ upstream localhost {
+
     server nodeapp1:8081;
     server nodeapp2:8081;
-}
-
-server {
+ }
+ server {
     listen 8080;
+    server_name localhost;
     location / {
-        proxy_pass http://loadbalance;
+       proxy_pass http://localhost;
+       proxy_set_header Host $host;
     }
+  }
 }
